; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_utctm.c_ASN1_UTCTIME_cmp_time_t.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_utctm.c_ASN1_UTCTIME_cmp_time_t.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ASN1_UTCTIME_cmp_time_t(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.tm, align 4
  %7 = alloca %struct.tm, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @asn1_utctime_to_tm(%struct.tm* %6, i32* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 -2, i32* %3, align 4
  br label %37

14:                                               ; preds = %2
  %15 = call i32* @OPENSSL_gmtime(i32* %5, %struct.tm* %7)
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %14
  store i32 -2, i32* %3, align 4
  br label %37

18:                                               ; preds = %14
  %19 = call i32 @OPENSSL_gmtime_diff(i32* %8, i32* %9, %struct.tm* %7, %struct.tm* %6)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %18
  store i32 -2, i32* %3, align 4
  br label %37

22:                                               ; preds = %18
  %23 = load i32, i32* %8, align 4
  %24 = icmp sgt i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %22
  %26 = load i32, i32* %9, align 4
  %27 = icmp sgt i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %25, %22
  store i32 1, i32* %3, align 4
  br label %37

29:                                               ; preds = %25
  %30 = load i32, i32* %8, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %35, label %32

32:                                               ; preds = %29
  %33 = load i32, i32* %9, align 4
  %34 = icmp slt i32 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %32, %29
  store i32 -1, i32* %3, align 4
  br label %37

36:                                               ; preds = %32
  store i32 0, i32* %3, align 4
  br label %37

37:                                               ; preds = %36, %35, %28, %21, %17, %13
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32 @asn1_utctime_to_tm(%struct.tm*, i32*) #1

declare dso_local i32* @OPENSSL_gmtime(i32*, %struct.tm*) #1

declare dso_local i32 @OPENSSL_gmtime_diff(i32*, i32*, %struct.tm*, %struct.tm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
